@@ -135,26 +135,9 @@ public class ConcreteSearchParameter implements SearchParameter {
         return this.conditionList;
     }
 
-    @Override
-    public String toString() {
-        return "ConcreteSearchParameter{" +
-                "names=" + names +
-                ", authors=" + authors +
-                ", keywords=" + keywords +
-                ", isBorrowed=" + isBorrowed +
-                ", borrowedAfterDate=" + borrowedAfterDate +
-                ", boughtAfterDate=" + boughtAfterDate +
-                ", boughtBeforeDate=" + boughtBeforeDate +
-                ", minBorrowCount=" + minBorrowCount +
-                ", maxBorrowCount=" + maxBorrowCount +
-                ", conditionList=" + conditionList +
-                '}';
-    }
-
     /**
      * Create the {@link SearchParameter} for the search.
      *
-     * @return the search parameter
      */
 
     public static class Builder implements SearchParameter.Builder {
@@ -170,8 +153,6 @@ public class ConcreteSearchParameter implements SearchParameter {
         private int maxBorrowCount;
         private List<Condition> conditionList;
 
-        public Builder() { /* TODO document why this constructor is empty */ }
-
         /**
          * Add names to search for.
          *
@@ -183,7 +164,12 @@ public class ConcreteSearchParameter implements SearchParameter {
             if (this.names == null) {
                 this.names = new ArrayList<>();
             }
-            this.names.addAll(List.of(name));
+            List<String> namesList = Arrays.asList(name);
+            namesList.forEach(n -> {
+                if (!this.names.contains(n) && n != null) {
+                    this.names.add(n);
+                }
+            });
             return this;
         }
 
@@ -198,7 +184,12 @@ public class ConcreteSearchParameter implements SearchParameter {
             if (this.authors == null) {
                 this.authors = new ArrayList<>();
             }
-            this.authors.addAll(List.of(author));
+            List<String> authorsList = Arrays.asList(author);
+            authorsList.forEach(a -> {
+                if (!this.authors.contains(a) && a != null) {
+                    this.authors.add(a);
+                }
+            });
             return this;
         }
 
@@ -213,7 +204,12 @@ public class ConcreteSearchParameter implements SearchParameter {
             if (this.keywords == null) {
                 this.keywords = new ArrayList<>();
             }
-            this.keywords.addAll(List.of(keyword));
+            List<String> keywordList = Arrays.asList(keyword);
+            keywordList.forEach(k -> {
+                if (!this.keywords.contains(k) && k != null) {
+                    this.keywords.add(k);
+                }
+            });
             return this;
         }
 
